syntax = "proto3";

package project;

service ProjectService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc FindOneById(FindOneByIdRequest) returns (FindResponse);
}

message BaseResponse {
  string status = 1;
  string msg = 2;
  bool ok = 3;
}

message CreateRequest {
  string name = 2;
  string description = 3;
  string ownerId = 4;
  string team = 5;
}

message CreateResponse {
  BaseResponse res = 1;
  string id = 2;
}

message UpdateRequest {
  string id = 1;
  string field = 2;
  string value = 3;
}

message UpdateResponse {
  BaseResponse res = 1;
}

message FindOneByIdRequest {
  string id = 1;
}

message FindResponse {
  BaseResponse res = 1;
  optional ProjectResponse project = 3;
}

message ProjectResponse{
  string id = 1;
  string name = 2;
  string description = 3;
  string ownerId = 4;
  string team = 5;
}

